--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Need to have 512 most important tokens. Use Spacy."
+    "# Need to have 512 most important tokens. Use Spacy. Do on training and test.\n"
    ]
   },
   {
@@ -721,6 +721,44 @@
     "\n",
     "test_summary = test.summary.values\n",
     "test_labels = test.genre_id.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4115580052.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[26], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    python -m spacy download en_core_web_lg\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "import pytextrank\n",
+    "# example text\n",
+    "text = \"\"\"Compatibility of systems of linear constraints over the set of natural numbers.\n",
+    "Criteria of compatibility of a system of linear Diophantine equations, strict inequations,\n",
+    "and nonstrict inequations are considered. Upper bounds for components of a minimal set of\n",
+    "solutions and algorithms of construction of minimal generating sets of solutions for all types\n",
+    "of systems are given. These criteria and the corresponding algorithms for constructing a minimal\n",
+    "supporting set of solutions can be used in solving all the considered types systems and systems of mixed types.\"\"\"\n",
+    "\n",
+    "# load a spaCy model, depending on language, scale, etc.\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "# add PyTextRank to the spaCy pipeline\n",
+    "nlp.add_pipe(\"textrank\")\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "# examine the top-ranked phrases in the document\n",
+    "for phrase in doc._.phrases:\n",
+    "    print(phrase.text)\n",
+    "    print(phrase.rank, phrase.count)\n",
+    "    print(phrase.chunks)"
    ]
   },
   {
@@ -1145,16 +1183,8 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# Move the model to evaluation mode\n",
     "model.eval()\n",
-    "\n",
-    "# Move the model to the same device as the test data\n",
     "model.to('cuda')\n",
-    "\n",
-    "# Initialize a list to store the predictions\n",
     "predictions = []\n",
     "\n",
     "# Create a progress bar\n",
@@ -1162,7 +1192,6 @@
     "\n",
     "# Iterate over the test dataset\n",
     "for batch in train_dataloader:\n",
-    "    # Move batch tensors to the same device as the model\n",
     "    batch = {k: v.to('cuda') for k, v in batch.items()}\n",
     "\n",
     "    # Disable gradient calculation\n",
@@ -1173,7 +1202,6 @@
     "\n",
     "    predicted_values = outputs.logits\n",
     "    predictions.extend(predicted_values)\n",
-    "\n",
     "\n",
     "# Convert logits to predictions\n",
     "predictions = [torch.argmax(item).item() for item in predictions]\n",
@@ -1213,7 +1241,6 @@
     "from transformers import BertTokenizer, BertForSequenceClassification, AdamW\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming your dataframes are named 'train' and 'test'\n",
     "train_df = train\n",
     "test_df = test\n",
     "\n",
