second model's performance saved

--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -1077,8 +1077,7 @@
     "#Load the model\n",
     "if os.path.exists(checkpoint_path):\n",
     "    checkpoint = torch.load(checkpoint_path)\n",
-    "    model.load_state_dict(checkpoint['model_sta\n",
-    "                                     +te_dict'])\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
     "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
     "    start_epoch = checkpoint['epoch']\n",
     "    losses = checkpoint['losses']\n",
@@ -1094,9 +1093,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.80      0.83       576\n",
+      "           1       0.74      0.80      0.77       347\n",
+      "           2       0.50      0.84      0.63       200\n",
+      "           3       0.86      0.78      0.82       300\n",
+      "           4       0.61      0.72      0.66       300\n",
+      "           5       0.87      0.64      0.74       723\n",
+      "           6       0.52      0.85      0.64        20\n",
+      "           7       0.36      0.52      0.43        31\n",
+      "           8       0.79      0.95      0.86        20\n",
+      "           9       0.56      1.00      0.71        20\n",
+      "\n",
+      "    accuracy                           0.75      2537\n",
+      "   macro avg       0.67      0.79      0.71      2537\n",
+      "weighted avg       0.78      0.75      0.75      2537\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "model.to('cuda')\n",
