Data preprocessing are now seperate from models

--- a/LLMTextClassification.ipynb
+++ b/LLMTextClassification.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bc669310",
+   "execution_count": 55,
+   "id": "054c1c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,14 @@
     "import os\n",
     "import torch\n",
     "import random\n",
+    "import spacy\n",
+    "import pytextrank\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "from torch.optim import Adam\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import BertTokenizer,RobertaTokenizer, LongformerTokenizer,  BigBirdTokenizerFast\n",
     "from transformers import BertForSequenceClassification, RobertaForSequenceClassification, LongformerForSequenceClassification, BigBirdForSequenceClassification"
    ]
@@ -20,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "688e0063",
+   "id": "1cbad0ca",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1c8801d6",
+   "id": "f780e9fb",
    "metadata": {},
    "outputs": [
     {
@@ -106,9 +113,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edba8af0",
+   "metadata": {},
+   "source": [
+    "# Set all the variable here:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "6c5e2e71",
+   "execution_count": 56,
+   "id": "1cd0d212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +136,16 @@
     "seed_val = 42\n",
     "\n",
     "TRAIN_DATA_PATH = \"data/ds1_train.csv\"\n",
-    "TEST_DATA_PATH = \"data/ds1_test.csv\"\n"
+    "TEST_DATA_PATH = \"data/ds1_test.csv\"\n",
+    "DATASET = \"ds1\" if \"ds1\" in TRAIN_DATA_PATH else \"ds2\"\n",
+    "LEARNING_RATE = 2e-5\n",
+    "NUM_EPOCHS = 4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0f3a0358",
+   "id": "2e8d9b47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bfe2ed08",
+   "id": "b7fedd44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d7bd0f11",
+   "id": "d64f0922",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364a72f7",
+   "id": "06e66c79",
    "metadata": {},
    "source": [
     "By now, data has been cleaned. Next step is to tokenize, train, and test.\n",
@@ -261,12 +279,10 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "488eeeed",
+   "id": "6844a171",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n",
-    "import pytextrank\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "nlp.add_pipe(\"textrank\")\n",
     "\n",
@@ -304,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ed58dd4a",
+   "id": "0364cbc9",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddde67a4",
+   "id": "c8ad29ad",
    "metadata": {},
    "source": [
     "# Tokenize the data"
@@ -339,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c8c2a870",
+   "id": "2e858f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,16 +369,10 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e6a4cdc4",
+   "id": "ad9e0ece",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM, BertTokenizer,RobertaTokenizer\n",
-    "\n",
-    "# Create a tokenizer\n",
-    "tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
-    "\n",
-    "\n",
     "# Tokenize the text\n",
     "def tokenize_text(summary, max_length=512):\n",
     "    # Tokenize the 'summary' column of the DataFrame using the tokenizer's batch_encode_plus method\n",
@@ -383,15 +393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f11676aa",
+   "execution_count": 54,
+   "id": "3e410740",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Then prepare the dataset and dataloader\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "\n",
-    "class BookDataset(Dataset):\n",
+    "class TextClassificationDataset(Dataset):\n",
     "    def __init__(self, encodings, labels):\n",
     "        self.encodings = encodings\n",
     "        self.labels = labels\n",
@@ -405,12 +412,154 @@
     "        return len(self.labels)\n",
     "\n",
     "# Create the dataset\n",
-    "train_dataset = BookDataset(tokenized_train_texts, train['genre_id'].values)\n",
-    "test_dataset = BookDataset(tokenized_test_texts, test['genre_id'].values)\n",
+    "train_dataset = TextClassificationDataset(tokenized_train_texts, train['label_id'].values)\n",
+    "test_dataset = TextClassificationDataset(tokenized_test_texts, test['label_id'].values)\n",
     "\n",
     "# Create the dataloader\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=8, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "988e7b11",
+   "metadata": {},
+   "source": [
+    "# train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5dede58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the optimizer\n",
+    "optimizer = Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "\n",
+    "# Move the model to the GPU\n",
+    "model.train()\n",
+    "model.to('cuda')\n",
+    "\n",
+    "# Initialize a list to store the loss values\n",
+    "losses = []\n",
+    "\n",
+    "checkpoint_path = f\"{MODEL}_{DATASET}_TextRank_{ENABLE_TEXT_RANK}.pth\" # Change to your preferred location\n",
+    "\n",
+    "start_epoch = 0\n",
+    "\n",
+    "# Load from checkpoint if it exists\n",
+    "if os.path.exists(checkpoint_path):\n",
+    "    checkpoint = torch.load(checkpoint_path)\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "    start_epoch = checkpoint['epoch']\n",
+    "    losses = checkpoint['losses']\n",
+    "    print(\"Loaded checkpoint.\")\n",
+    "\n",
+    "# Training \n",
+    "for epoch in range(start_epoch, NUM_EPOCHS):\n",
+    "    print(f\"Starting epoch {epoch}\")\n",
+    "    for batch in tqdm(train_dataloader, desc=\"Training\"):\n",
+    "        batch = {k: v.to('cuda') for k, v in batch.items()}\n",
+    "\n",
+    "        outputs = model(**batch)\n",
+    "        loss = outputs.loss\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Optimize the model parameters\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Append the loss value to the list\n",
+    "        losses.append(loss.item())  \n",
+    "\n",
+    "    # Save checkpoint after each epoch\n",
+    "    torch.save({\n",
+    "        'epoch': epoch + 1,\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "        'losses': losses,\n",
+    "    }, checkpoint_path)\n",
+    "    print(f\"Saved checkpoint for epoch {epoch}.\")\n",
+    "\n",
+    "    # Plot the loss values after each epoch\n",
+    "    plt.plot(losses)\n",
+    "    plt.xlabel('Iteration')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.title('Loss over Iterations')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "897d1964",
+   "metadata": {},
+   "source": [
+    "# Model now been trained, now evaluate the performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3a476b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#If yo have a trained model just want to evaluate it:\n",
+    "checkpoint_path = \"Model.pth\"  # Change to your preferred location\n",
+    "if os.path.exists(checkpoint_path):\n",
+    "    checkpoint = torch.load(checkpoint_path)\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "    start_epoch = checkpoint['epoch']\n",
+    "    losses = checkpoint['losses']\n",
+    "    print(\"Loaded checkpoint.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b355cbe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "model.to('cuda')\n",
+    "predictions = []\n",
+    "true_labels = []\n",
+    "\n",
+    "# Iterate over the test dataset\n",
+    "for batch in test_dataloader:\n",
+    "    batch = {k: v.to('cuda') for k, v in batch.items()}\n",
+    "\n",
+    "    # Disable gradient calculation\n",
+    "    with torch.no_grad():\n",
+    "        # Perform inference\n",
+    "        outputs = model(**batch)\n",
+    "        \n",
+    "    predicted_values = outputs.logits\n",
+    "    predictions.extend(predicted_values)\n",
+    "    true_labels.extend(batch['labels'].tolist())\n",
+    "\n",
+    "# Convert logits to predictions\n",
+    "predictions = [torch.argmax(item).item() for item in predictions]\n",
+    "\n",
+    "# Make sure that true_labels is a list\n",
+    "assert isinstance(true_labels, list)\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "  \n",
+    "# Generate classification report\n",
+    "report = classification_report(true_labels, predictions)\n",
+    "\n",
+    "print(report)\n",
+    "\n",
+    "# Save the report to a file\n",
+    "with open(f'Classreport_{MODEL}_{DATASET}_TextRank_{ENABLE_TEXT_RANK}.txt', 'w') as file:\n",
+    "    file.write(report)\n"
    ]
   }
  ],
