Bug when training, fix it later

--- a/LLMTextClassification.ipynb
+++ b/LLMTextClassification.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "054c1c13",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import torch\n",
     "import random\n",
     "import spacy\n",
     "import pytextrank\n",
-    "import matplotlib.pyplot as plt\n",
+    "import logging\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -26,7 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "id": "f29134b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarize the input to how many tokens, default to 512 for BERT use.\n",
+    "# Since LongFormer could accept 4096 tokens, we could skip TextRank if LongFormer\n",
+    "ENABLE_TEXT_RANK = False\n",
+    "TEXT_RANK_LENGTH = 512\n",
+    "\n",
+    "MODEL = \"bert\" # Choose from \"bert\", \"roberta\", \"longformer\", \"bigbird\"\n",
+    "seed_val = 42\n",
+    "\n",
+    "TRAIN_DATA_PATH = \"data/ds1_train.csv\"\n",
+    "TEST_DATA_PATH = \"data/ds1_test.csv\"\n",
+    "DATASET = \"ds1\" if \"ds1\" in TRAIN_DATA_PATH else \"ds2\"\n",
+    "LEARNING_RATE = 2e-5\n",
+    "NUM_EPOCHS = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1cbad0ca",
    "metadata": {},
    "outputs": [
@@ -55,38 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f780e9fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight']\n",
-      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaForSequenceClassification: ['lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight', 'roberta.pooler.dense.weight', 'lm_head.dense.bias', 'roberta.pooler.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.decoder.weight']\n",
-      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at roberta-base and are newly initialized: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Some weights of the model checkpoint at allenai/longformer-base-4096 were not used when initializing LongformerForSequenceClassification: ['lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.decoder.weight']\n",
-      "- This IS expected if you are initializing LongformerForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing LongformerForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of LongformerForSequenceClassification were not initialized from the model checkpoint at allenai/longformer-base-4096 and are newly initialized: ['classifier.out_proj.bias', 'classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Load the model, if no model to load, initialize all the model and tokenizer for further use.\n",
-    "#There will be several warning message pop out when initializing the model, \n",
-    "# it is because of the model haven't been trained, it could be ignored.\n",
     "\n",
     "checkpoint_path = \"Model.pth\"  # Change to your preferred location\n",
+    "\n",
+    "# Suppress transformers warnings\n",
+    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n",
     "\n",
     "if os.path.exists(checkpoint_path):\n",
     "    checkpoint = torch.load(checkpoint_path)\n",
@@ -109,50 +111,19 @@
     "        \"longformer\": LongformerForSequenceClassification.from_pretrained('allenai/longformer-base-4096'),\n",
     "        \"bigbird\": BigBirdForSequenceClassification.from_pretrained('l-yohai/bigbird-roberta-base-mnli')\n",
     "    }\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edba8af0",
-   "metadata": {},
-   "source": [
-    "# Set all the variable here:"
+    "    \n",
+    "\n",
+    "# Restore default logging level for transformers\n",
+    "logging.getLogger(\"transformers\").setLevel(logging.WARNING)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "1cd0d212",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Summarize the input to how many tokens, default to 512 for BERT use.\n",
-    "# Since LongFormer could accept 4096 tokens, we may could skip TextRank if LongFormer\n",
-    "ENABLE_TEXT_RANK = False\n",
-    "TEXT_RANK_LENGTH = 512\n",
-    "\n",
-    "MODEL = \"bert\" # Choose from \"bert\", \"roberta\", \"longformer\", \"bigbird\"\n",
-    "seed_val = 42\n",
-    "\n",
-    "TRAIN_DATA_PATH = \"data/ds1_train.csv\"\n",
-    "TEST_DATA_PATH = \"data/ds1_test.csv\"\n",
-    "DATASET = \"ds1\" if \"ds1\" in TRAIN_DATA_PATH else \"ds2\"\n",
-    "LEARNING_RATE = 2e-5\n",
-    "NUM_EPOCHS = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "2e8d9b47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the selected tokenizer and model\n",
-    "tokenizer = tokenizer_options.get(MODEL)\n",
-    "model = model_options.get(MODEL)\n",
-    "\n",
     "# Set the seed value all over the place to make this reproducible.\n",
     "random.seed(seed_val)\n",
     "np.random.seed(seed_val)\n",
@@ -162,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "b7fedd44",
    "metadata": {},
    "outputs": [],
@@ -173,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "d64f0922",
    "metadata": {},
    "outputs": [
@@ -254,7 +225,7 @@
        "4  fantasy   tithe follows the story of sixteen year old a...         0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,6 +233,37 @@
    "source": [
     "print(train.shape)\n",
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "29a3419e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fantasy       300\n",
+       "science       300\n",
+       "crime         300\n",
+       "history       300\n",
+       "horror        300\n",
+       "thriller      300\n",
+       "psychology     80\n",
+       "romance        80\n",
+       "sports         80\n",
+       "travel         80\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[\"label\"].value_counts()"
    ]
   },
   {
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "6844a171",
    "metadata": {},
    "outputs": [],
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "0364cbc9",
    "metadata": {},
    "outputs": [
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "2e858f0f",
    "metadata": {},
    "outputs": [],
@@ -368,32 +370,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "ad9e0ece",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use the selected tokenizer\n",
+    "tokenizer = tokenizer_options.get(MODEL)\n",
+    "\n",
     "# Tokenize the text\n",
-    "def tokenize_text(summary, max_length=512):\n",
-    "    # Tokenize the 'summary' column of the DataFrame using the tokenizer's batch_encode_plus method\n",
-    "    # df['summary'].tolist() converts the 'summary' column into a list of strings\n",
-    "    # max_length specifies the maximum length of the tokenized sequences\n",
-    "    # padding='max_length' pads the tokenized sequences to have a length of max_length\n",
-    "    # truncation=True truncates the tokenized sequences if they exceed the max_length\n",
+    "def tokenize_text(text, max_length=512):\n",
     "    return tokenizer.batch_encode_plus(\n",
-    "        summary.tolist(), \n",
+    "        text.tolist(), \n",
     "        max_length=max_length, \n",
     "        padding='max_length', \n",
     "        truncation=True\n",
     "    )\n",
     "\n",
-    "tokenized_train_texts = tokenize_text(train_summary)\n",
-    "tokenized_test_texts = tokenize_text(test_summary)"
+    "tokenized_train_texts = tokenize_text(train_text)\n",
+    "tokenized_test_texts = tokenize_text(test_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "3e410740",
    "metadata": {},
    "outputs": [],
@@ -430,11 +430,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e5dede58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:   0%|                                         | 0/265 [00:00<?, ?it/s]/opt/conda/conda-bld/pytorch_1682343964576/work/aten/src/ATen/native/cuda/Loss.cu:240: nll_loss_forward_reduce_cuda_kernel_2d: block: [0,0,0], thread: [0,0,0] Assertion `t >= 0 && t < n_classes` failed.\n",
+      "/opt/conda/conda-bld/pytorch_1682343964576/work/aten/src/ATen/native/cuda/Loss.cu:240: nll_loss_forward_reduce_cuda_kernel_2d: block: [0,0,0], thread: [1,0,0] Assertion `t >= 0 && t < n_classes` failed.\n",
+      "/opt/conda/conda-bld/pytorch_1682343964576/work/aten/src/ATen/native/cuda/Loss.cu:240: nll_loss_forward_reduce_cuda_kernel_2d: block: [0,0,0], thread: [3,0,0] Assertion `t >= 0 && t < n_classes` failed.\n",
+      "/opt/conda/conda-bld/pytorch_1682343964576/work/aten/src/ATen/native/cuda/Loss.cu:240: nll_loss_forward_reduce_cuda_kernel_2d: block: [0,0,0], thread: [4,0,0] Assertion `t >= 0 && t < n_classes` failed.\n",
+      "/opt/conda/conda-bld/pytorch_1682343964576/work/aten/src/ATen/native/cuda/Loss.cu:240: nll_loss_forward_reduce_cuda_kernel_2d: block: [0,0,0], thread: [7,0,0] Assertion `t >= 0 && t < n_classes` failed.\n",
+      "Training:   0%|                                         | 0/265 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "unique_by_key: failed to synchronize: cudaErrorAssert: device-side assert triggered",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 36\u001b[0m\n\u001b[1;32m     34\u001b[0m outputs \u001b[38;5;241m=\u001b[39m model(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mbatch)\n\u001b[1;32m     35\u001b[0m loss \u001b[38;5;241m=\u001b[39m outputs\u001b[38;5;241m.\u001b[39mloss\n\u001b[0;32m---> 36\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;66;03m# Optimize the model parameters\u001b[39;00m\n\u001b[1;32m     39\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "File \u001b[0;32m~/miniconda3/envs/textsum/lib/python3.9/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    488\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    489\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/textsum/lib/python3.9/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[38;5;66;03m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    202\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: unique_by_key: failed to synchronize: cudaErrorAssert: device-side assert triggered"
+     ]
+    }
+   ],
    "source": [
+    "# Use the selected model\n",
+    "model = model_options.get(MODEL)\n",
+    "\n",
     "# Initialize the optimizer\n",
     "optimizer = Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "\n",
